Fixing responsiveness of Media.tsx and ProfileCard.tsx + adding global.scss overflow-x: hidden; to avoid sideways scrolling

--- a/src/styling/_global.scss
+++ b/src/styling/_global.scss
@@ -23,6 +23,8 @@ main {
     padding: $size-m;
     margin-left: $size-7xl;
 
+    overflow-x: hidden;
+
     @media (max-width: $bp-desktop) {
         margin-left: $size-0;
     }
