--- a/src/styling/components/_genreMenu.scss
+++ b/src/styling/components/_genreMenu.scss
@@ -1,7 +1,8 @@
 @use "../variables.scss" as *;
 
 .genre-menu {
-    margin-top: $size-3xl;
+    margin-top: $size-2xl;
+    margin-bottom: $size-2xl;
     padding: 0;
     list-style: none;
 
